--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Recipe App</title>
 </head>
 <body>
     <h1>My Recipe !</h1>
+
+        <table>
+
+
+            <tr>
+                <th>ID</th>
+                <th>Description</th>
+            </tr>
+
+            <tr th:each="recipe : ${recipes}">
+                <td th:text="${recipe.id}">
+                    123
+                </td>
+                <td th:text="${recipe.description}">
+                    sasddasaf
+                </td>
+            </tr>
+
+
+        </table>
 
 </body>
 </html>
